📒🗾 Checkpoint ./public/style.css:13180552/214 ./public/index.html:13180552/5

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <h1>FREKVENS AFSTANDSBEDIENING</h1>
     </header>
 
-    <div class="glitchButton" style="position:fixed;top:2em;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js"></script>
+    <!--div class="glitchButton" style="position:fixed;top:2em;right:20px;"></div>
+    <script src="https://button.glitch.me/button.js"></script-->
   </body>
 </html>
