🎽🌈 Checkpoint ./public/style.css:13180552/81 ./public/index.html:13180552/56 ./server.js:13180552/61

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Controls a hacked FREKVENS LED light cube">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
+    <script src="/lib/socket.io/socket.io.js"></script>
     <script src="/script.js" defer></script>
   </head>
   <body>
