--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
       <h1>FREKVENS AFSTANDSBEDIENING</h1>
     </header>
 
-    <textarea id="script"><!--
--->const x = Math.cos(t) * 8 + 8 | 0;
+    <textarea id="script">
+const x = Math.cos(t) * 8 + 8 | 0;
 const y = Math.sin(t) * 8 + 8 | 0;
 
 pixels[y * 16 + x] = 1;      
