--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FREKVENS AFSTANDSBEDIENING</title>
+    <title>FREKVENS FJÄRRKONTROLL</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Controls a hacked FREKVENS LED light cube">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>FREKVENS AFSTANDSBEDIENING</h1>
+      <h1>FREKVENS Fjärrkontroll</h1>
     </header>
 
     <textarea id="script">
