--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     </header>
 
     <section id="frekvens">
-      <canvas id="front"></canvas>
-      <canvas id="back"></canvas>
+      <canvas id="front" width="100" height="100"></canvas>
+      <canvas id="back" width="100" height="100"></canvas>
     </section>
     
     <section id="code">
