💑👩‍❤️‍💋‍👩 Checkpoint ./public/index.html:13180552/288 ./public/style.css:13180552/465

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,12 @@
     </header>
 
     <section id="frekvens">
-      <canvas id="front" width="100" height="100"></canvas>
-      <canvas id="back" width="100" height="100"></canvas>
+      <div class="canvas-container">
+        <canvas id="front"></canvas>
+      </div>
+      <div class="canvas-container">
+        <canvas id="back"></canvas>
+      </div>
     </section>
     
     <section id="code">
