💇🍇 Checkpoint ./public/style.css:13180552/41 ./public/index.html:13180552/10

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </section>
     
     <section id="code">
-      <textarea id="script">
+      <textarea id="script" rows="20">
 const x = Math.cos(t) * 8 + 8 | 0;
 const y = Math.sin(t) * 8 + 8 | 0;
 
