🏓🏖 Checkpoint ./public/style.css:13180552/339 ./public/index.html:13180552/93 ./public/script.js:2055375/30:13180552/30

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,7 @@
     </header>
 
     <section id="frekvens">
-      <div class="canvas-container">
-        <canvas id="front"></canvas>
-      </div>
+      <canvas id="front" width="600" height="600"></canvas>
     </section>
     
     <section id="code">
