🏵🍽 Checkpoint ./public/style.css:13180552/96 ./public/index.html:13180552/27 ./public/script.js:13180552/329 ./server.js:13180552/176

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <section id="frekvens">
-      <canvas id="front" width="600" height="600"></canvas>
+      <canvas id="front"></canvas>
     </section>
     
     <section id="code">
