💸🏬 Checkpoint ./public/script.js:13180552/334 ./public/index.html:13180552/70

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,13 @@
     </section>
     
     <section id="code">
-      <textarea id="script" rows="20">
+      <textarea id="script" rows="20" disabled>
 const x = Math.cos(t) * 8 + 8 | 0;
 const y = Math.sin(t) * 8 + 8 | 0;
 
 pixels[y * 16 + x] = 1;      
       </textarea>
+      <div id="error"></div>
     </section>
     
     <script>init(io());</script>
