🔋🐏 Checkpoint ./public/script.js:13180552/642 ./public/index.html:13180552/142

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,7 @@
     </section>
     
     <section id="code">
-      <textarea id="script" rows="20" disabled>
-const x = Math.cos(t) * 8 + 8 | 0;
-const y = Math.sin(t) * 8 + 8 | 0;
-
-pixels[y * 16 + x] = 1;      
-      </textarea>
+      <textarea id="script" rows="20" disabled></textarea>
       <div id="error"></div>
     </section>
     
