🦄🌅 Checkpoint ./public/script.js:13180552/222 ./public/style.css:13180552/26 ./public/index.html:13180552/149

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
     </section>
     
     <section id="code">
-      <textarea id="script" rows="20" disabled></textarea>
+      <div>
+        <textarea id="script" rows="20" disabled></textarea>
+      </div>
       <div id="error"></div>
     </section>
     
