Explicit publish button

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,16 @@
     </section>
 
     <section id="code">
-      <textarea id="script" rows="20" disabled></textarea>
+      <textarea id="script" rows="20"></textarea>
     </section>
 
-    <div id="error"></div>
+    <section>
+      <div id="error"></div>
+    </section>
+
+    <section>
+      <button id="publish" type="button" disabled>Publish</publish>
+    </section>
 
     <script>init(io());</script>
 
