Add yellow/red buttons

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
     </section>
 
     <section>
-      <button id="publish" type="button" disabled>Publish</publish>
+      <button id="publish" type="button" disabled>Publish</button>
+      <button id="yellow" type="button" disabled>Yellow</button>
+      <button id="red" type="button" disabled>Red</button>
     </section>
 
     <script>init(io());</script>
