--- a/public/as.html
+++ b/public/as.html
@@ -119,7 +119,7 @@
     }
 
     function smoothstep(edge0: f64, edge1: f64, x: f64): f64 {
-      let t: f64 = clamp((x - edge0) / (edge1 - edge0), 0.0, 1.0);
+      const t: f64 = clamp((x - edge0) / (edge1 - edge0), 0.0, 1.0);
       return t * t * (3 - 2 * t);
     }
 
