--- a/public/as.html
+++ b/public/as.html
@@ -9,10 +9,10 @@
   <script type="importmap">
   {
     "imports": {
-      "binaryen": "https://cdn.jsdelivr.net/npm/binaryen@111.0.0/index.js",
-      "long": "https://cdn.jsdelivr.net/npm/long@5.2.1/index.js",
-      "assemblyscript": "https://cdn.jsdelivr.net/npm/assemblyscript@0.26.1/dist/assemblyscript.js",
-      "assemblyscript/asc": "https://cdn.jsdelivr.net/npm/assemblyscript@0.26.1/dist/asc.js"
+      "binaryen": "https://cdn.jsdelivr.net/npm/binaryen@111.0.0-nightly.20230111/index.js",
+      "long": "https://cdn.jsdelivr.net/npm/long@5.2.0/index.js",
+      "assemblyscript": "https://cdn.jsdelivr.net/npm/assemblyscript@0.26.2/dist/assemblyscript.js",
+      "assemblyscript/asc": "https://cdn.jsdelivr.net/npm/assemblyscript@0.26.2/dist/asc.js"
     }
   }
   </script>
