--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <link id="favicon" rel="icon" type="image/png">
     <link rel="stylesheet" href="/style.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/script.js"></script>
   </head>
   <body>
     <header>
@@ -34,9 +33,8 @@
       <button id="red" type="button" disabled>Red</button>
     </section>
 
-    <script>init(io());</script>
-
     <!--div class="glitchButton" style="position:fixed;top:2em;right:20px;"></div>
     <script src="https://button.glitch.me/button.js"></script-->
+    <script type="module" src="/script.js"></script>
   </body>
 </html>
