Add binary publication

--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -19,6 +19,9 @@
   <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+  <div id="top-bar">
+    <button type="button" id="publish">Publish</button>
+  </div>
   <div id="editor-container">
     <pre id="preamble"></pre>
     <textarea id="editor"></textarea>
