--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FJÄRRKONTROLL</title>
-  <link rel="stylesheet" href="as.css">
+  <link rel="stylesheet" href="obegransad.css">
   <script type="importmap">
   {
     "imports": {
