--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -49,12 +49,33 @@
       }
 
       function clamp(x: f32, min: f32, max: f32): f32 {
-        return Math.max(min, Math.min(max, x));
+        return Mathf.max(min, Mathf.min(max, x));
       }
 
       function smoothstep(edge0: f32, edge1: f32, x: f32): f32 {
         const t: f32 = clamp((x - edge0) / (edge1 - edge0), 0.0, 1.0);
         return t * t * (3 - 2 * t);
+      }
+
+      function gen_sin(): void {
+        for (let i: i32 = 0; i < 256; i++) {
+          const s: f32 = Mathf.sin(<f32>i / 256 * Mathf.PI * 2);
+          store<f32>(256 + i * 4, s);
+        }
+      }
+
+      function lu_sin(a: f32): f32 {
+        const i: i32 = <i32>((((a / (Mathf.PI * 2) * 256) % 256) + 256) % 256);
+        return load<f32>(256 + i * 4);
+      }
+
+      export function setup(): void {
+        gen_sin();
+      }
+
+      export function test(v: f32): f32 {
+        const s: f32 = <f32>v / 60;
+        return lu_sin(s * 1.1);
       }
 
       export function render(frame: i32): void {
@@ -64,21 +85,25 @@
     <script type="text/assemblyscript" id="sample-code">
       const s: f32 = <f32>frame / 60;
 
+      const xs0: f32 = (lu_sin(s * 1.1) + 1) * 7.5;
+      const ys0: f32 = (Mathf.cos(s * 1.3) + 1) * 7.5;
+      const xs1: f32 = (lu_sin(s * 1.5) + 1) * 7.5;
+      const ys1: f32 = (Mathf.cos(s * 1.7) + 1) * 7.5;
+
       for (let y: i32 = 0; y < ROWS; y++) {
         for (let x: i32 = 0; x < COLS; x++) {
           let d: f32 = 0;
 
-          d += 3 / Math.hypot(
-            7.5 + Math.sin(s * 1.1) * 7.5 - <f32>x,
-            (7.5 + Math.cos(s * 1.3) * 7.5 - <f32>y) / ASPECT_RATIO
+          d += 3 / Mathf.hypot(
+            xs0 - <f32>x,
+            (ys0 - <f32>y) / ASPECT_RATIO
+          );
+          d += 3 / Mathf.hypot(
+            xs1 - <f32>x,
+            (ys1 - <f32>y) / ASPECT_RATIO
           );
 
-          d += 2 / Math.hypot(
-            7.5 + Math.sin(s * 1.5) * 7.5 - <f32>x,
-            (7.5 + Math.cos(s * 1.7) * 7.5 - <f32>y) / ASPECT_RATIO
-          );
-
-          setXY(x, y, <u8>Math.round(smoothstep(0.75, 1.0, d) * 3));
+          setXY(x, y, <u8>Mathf.round(smoothstep(0.75, 1.0, d) * 3));
         }
       }
     </script>
