--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -64,21 +64,25 @@
     <script type="text/assemblyscript" id="sample-code">
       const s: f32 = <f32>frame / 60;
 
+      const xs0: f32 = (Mathf.sin(s * 1.1) + 1) * 7.5;
+      const ys0: f32 = (Mathf.cos(s * 1.3) + 1) * 7.5;
+      const xs1: f32 = (Mathf.sin(s * 1.5) + 1) * 7.5;
+      const ys1: f32 = (Mathf.cos(s * 1.7) + 1) * 7.5;
+
       for (let y: i32 = 0; y < ROWS; y++) {
         for (let x: i32 = 0; x < COLS; x++) {
           let d: f32 = 0;
 
-          d += 3 / Math.hypot(
-            7.5 + Math.sin(s * 1.1) * 7.5 - <f32>x,
-            (7.5 + Math.cos(s * 1.3) * 7.5 - <f32>y) / ASPECT_RATIO
+          d += 3 / Mathf.sqrt(
+            (xs0 - <f32>x) ** 2
+            + ((ys0 - <f32>y) / ASPECT_RATIO) ** 2
+          );
+          d += 3 / Mathf.sqrt(
+            (xs1 - <f32>x) ** 2
+            + ((ys1 - <f32>y) / ASPECT_RATIO) ** 2
           );
 
-          d += 2 / Math.hypot(
-            7.5 + Math.sin(s * 1.5) * 7.5 - <f32>x,
-            (7.5 + Math.cos(s * 1.7) * 7.5 - <f32>y) / ASPECT_RATIO
-          );
-
-          setXY(x, y, <u8>Math.round(smoothstep(0.75, 1.0, d) * 3));
+          setXY(x, y, <u8>Mathf.round(smoothstep(0.75, 1.0, d) * 3));
         }
       }
     </script>
