🍯🏥 Checkpoint ./public/obegransad.js:13180552/4 ./public/obegransad.html:13180552/8

--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -57,7 +57,7 @@
         return t * t * (3 - 2 * t);
       }
 
-      export function render(frame: i32): void {
+      export function render(frame: i32, t: u64): void {
         ${code}
       }
     </script>
