--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -57,12 +57,12 @@
         return t * t * (3 - 2 * t);
       }
 
-      export function render(frame: i32, t: u64): void {
+      export function render(frame: i32, t: f32): void {
         ${code}
       }
     </script>
     <script type="text/assemblyscript" id="sample-code">
-      const s: f32 = <f32>frame / 60;
+      const s: f32 = t / 1000;
 
       const xs0: f32 = (Math.sin(s * 1.1) + 1) * 7.5;
       const ys0: f32 = (Math.cos(s * 1.3) + 1) * 7.5;
