--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -62,14 +62,12 @@
       }
     </script>
     <script type="text/assemblyscript" id="sample-code">
-      const s: f32 = t / 1000;
-
-      const xs0: f32 = (Math.sin(s * 1.1) + 1) * 7.5;
-      const ys0: f32 = (Math.cos(s * 1.3) + 1) * 7.5;
-      const xs1: f32 = (Math.sin(s * 1.5) + 1) * 7.5;
-      const ys1: f32 = (Math.cos(s * 1.7) + 1) * 7.5;
-      const xs2: f32 = (Math.sin(s * 1.9) + 1) * 7.5;
-      const ys2: f32 = (Math.cos(s * 2.1) + 1) * 7.5;
+      const xs0: f32 = (Math.sin(t * 1.1) + 1) * 7.5;
+      const ys0: f32 = (Math.cos(t * 1.3) + 1) * 7.5;
+      const xs1: f32 = (Math.sin(t * 1.5) + 1) * 7.5;
+      const ys1: f32 = (Math.cos(t * 1.7) + 1) * 7.5;
+      const xs2: f32 = (Math.sin(t * 1.9) + 1) * 7.5;
+      const ys2: f32 = (Math.cos(t * 2.1) + 1) * 7.5;
 
       for (let y: i32 = 0; y < ROWS; y++) {
         for (let x: i32 = 0; x < COLS; x++) {
