--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -62,12 +62,14 @@
       }
     </script>
     <script type="text/assemblyscript" id="sample-code">
-      // const i: i32 = <i32>(<i64>t & 255);
-      // const m: i32 = <i32>(<i64>(t * 16) & 15);
-      // set(i, ON);
-      // setXY(0, m, ON);
-      // const s: f32 = <f32>t;
-      
+      const i: i32 = <i32>(<i64>t & 255);
+      const m: i32 = <i32>(<i64>(t * 16) & 15);
+      set(i, ON);
+      setXY(0, m, ON);
+      const j: i32 = <i32>((Mathf.sin(<f32>t) + 1) * 7.5);
+      setXY(j, 0, ON);
+
+      return;
       const xs0: f64 = (Math.sin(t * 1.1) + 1) * 7.5;
       const ys0: f64 = (Math.cos(t * 1.3) + 1) * 7.5;
       const xs1: f64 = (Math.sin(t * 1.5) + 1) * 7.5;
@@ -76,10 +78,10 @@
       const ys2: f64 = (Math.cos(t * 2.1) + 1) * 7.5;
 
       for (let y: u8 = 0; y < ROWS; y++) {
-        let fy: f64 = <f64>y;
+        let fy: f64 = y;
         
         for (let x: u8 = 0; x < COLS; x++) {
-          let fx: f64 = <f64>x;
+          let fx: f64 = x;
           let d: f64 = 0;
           let dx: f64, dy: f64;
 
