--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -62,15 +62,10 @@
       }
     </script>
     <script type="text/assemblyscript" id="sample-code">
-      //const i: i32 = <i32>(<i64>t & 255);
-      //const m: i32 = <i32>(<i64>(t * 16) & 15);
-      //set(i, ON);
-      //setXY(0, m, ON);
-      //const s: f64 = Math.sin(<f32>(t));
-      //const pos: f64 = (s + 1) * 7.5
-      //const j: i32 = <i32>Math.round(pos);
-      //setXY(j, 0, ON);
-      //return;
+      const pos: f64 = (Math.sin(t) + 1) * 7.5
+      const j: i32 = <i32>Math.round(pos);
+      setXY(j, 0, ON);
+      return;
       
       const xs0: f64 = (Math.sin(t * 1.1) + 1) * 7.5;
       const ys0: f64 = (Math.cos(t * 1.3) + 1) * 7.5;
