👬🏏 Checkpoint ./public/obegransad.html:13180552/11 ./public/obegransad.js:13180552/219

--- a/public/obegransad.html
+++ b/public/obegransad.html
@@ -62,8 +62,8 @@
       }
     </script>
     <script type="text/assemblyscript" id="sample-code">
-      const pos: f64 = (Math.sin(t) + 1) * 7.5
-      const j: i32 = <i32>Math.round(pos);
+      const pos: f64 = (Math.sin(t) + 1) * 7.5;
+      const j: u8 = <u8>Math.round(pos);
       setXY(j, 0, ON);
       return;
       
